# ChangeLog for www-apache/mod_security
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_security/ChangeLog,v 1.63 2011/12/18 17:30:24 armin76 Exp $

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> mod_security-2.6.1.ebuild:
  sparc stable wrt #383315

*mod_security-2.6.2 (02 Oct 2011)

  02 Oct 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  -mod_security-2.6.2_rc1.ebuild, +mod_security-2.6.2.ebuild:
  Version bump.

  20 Sep 2011; Andreas Schuerch <nativemad@gentoo.org>
  mod_security-2.6.1.ebuild:
  x86 stable, see bug 383315

  20 Sep 2011; Tony Vroon <chainsaw@gentoo.org> mod_security-2.6.1.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo in bug
  #383315.

  17 Sep 2011; Matt Turner <mattst88@gentoo.org> mod_security-2.5.12.ebuild:
  Drop ~mips, bug 383315.

*mod_security-2.6.2_rc1 (17 Sep 2011)

  17 Sep 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  -mod_security-2.5.13-r2.ebuild, +mod_security-2.6.2_rc1.ebuild:
  Version bump and remove old.

*mod_security-2.6.1 (25 Jul 2011)

  25 Jul 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  -mod_security-2.6.0.ebuild, -mod_security-2.6.1_rc1.ebuild,
  +mod_security-2.6.1.ebuild:
  Version bump to final 2.6.1; remove 2.6.0 and rc1. Use SF.net mirrors
  directly from now on to avoid one redirect and respect users' choices.

*mod_security-2.6.1_rc1 (07 Jul 2011)

  07 Jul 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  +mod_security-2.6.1_rc1.ebuild:
  Version bump; this version re-introduces the lua USE flag.

*mod_security-2.6.0 (19 May 2011)

  19 May 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  -mod_security-2.6.0_rc1.ebuild, -mod_security-2.6.0_rc2.ebuild,
  +mod_security-2.6.0.ebuild:
  Bump to final 2.6.0 version.

*mod_security-2.6.0_rc2 (02 May 2011)

  02 May 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  +mod_security-2.6.0_rc2.ebuild:
  Bump to newer release candidate.
