@@ -1,6 +1,12 @@
 # ChangeLog for www-apache/mod_security
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_security/ChangeLog,v 1.63 2011/12/18 17:30:24 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_security/ChangeLog,v 1.64 2011/12/27 21:46:34 flameeyes Exp $
+
+*mod_security-2.6.3 (27 Dec 2011)
+
+  27 Dec 2011; Diego E. Pettenò <flameeyes@gentoo.org>
+  +mod_security-2.6.3.ebuild:
+  Version bump.
 
   18 Dec 2011; Raúl Porcel <armin76@gentoo.org> mod_security-2.6.1.ebuild:
   sparc stable wrt #383315
